Edit link to mixtape
Edit link to mixtape

--- a/src/index.html
+++ b/src/index.html
@@ -143,7 +143,7 @@
 							</div>
 							<a ng-href="{{event.meta.eventbuttonurl}}" target="_blank" class="button button--important"
 								ng-if="event.meta.eventbuttonlabel && event.meta.eventbuttonurl">{{event.meta.eventbuttonlabel}}</a>
-							<a ng-href="{{timeline.meta.eventmixtapeurl}}" target="_blank" class="article__footerLink"
+							<a ng-href="{{timeline.meta.eventmixtapeurl}}" target="_self" class="article__footerLink"
 								ng-if="event.meta.eventmixtapetitle && timeline.meta.eventmixtapeurl">Dans la mixtape : « {{event.meta.eventmixtapetitle}} »</a>
 						</div>
 					</div>
