--- a/src/index.html
+++ b/src/index.html
@@ -68,7 +68,7 @@
 		<div class="container">
 
             <div class="intro">
-                <div class="overheading"><span class="overheading__label">Avant propos</span></div>
+<!--                 <div class="overheading"><span class="overheading__label">Avant propos</span></div> -->
                 <h2 class="heading heading--1">{{timeline.meta.eventsubtitle}}</h2>
                 <p class="paragraph" ng-bind-html="timeline.content"></p>
             </div>
